--- a/appengine/prod/dispatch.yaml
+++ b/appengine/prod/dispatch.yaml
@@ -1,8 +1,11 @@
 dispatch:
-  # Send all work to the one static backend.
   - url: "api.flatten.ca/*"
     service: production
   - url: "flatten.ca/*"
     service: default
   - url: "flatten.org/*"
     service: default
+  - url: "api.flatten.so/*"
+    service: backend-so
+  - url: "m.flatten.ca/*"
+    service: variant
